# momor

./: .gitignore  .gitmodules  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  QA_REPORT.md  QAautomationprompt.md  README.md  ROADMAP.md  SECURITY.md  changes.md  cluelyresearch.md  comparisonreport.md  index.html  package-lock.json  package.json  promptfix.md  refund.md  report.md  tailwind.config.js  termsandcondition.md  tinypromptsreport.md  visionpipelineresearch.md  visionupgrade.md  vite.config.mts
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/releases/: v2.0.8.md  v2.0.9.md  v2.2.0.md
.github/workflows/: build-smoke.yml
docs/engineering/: CLUEly_PARITY_FINAL_INTEGRATION_REPORT.md  FINAL_INDIVIDUAL_USER_PARITY_REPORT.md  LOCAL_DB_ENCRYPTION_DESIGN.md  NATIVELY_CLUELY_PARITY_FIX_LOG.md  VISION_FIRST_PIVOT_REPORT.md  (+8 more)
electron/: DonationManager.ts  IntelligenceEngine.ts  IntelligenceManager.ts  LLMHelper.ts  LLMHelper.ts.orig  ModelSelectorWindowHelper.ts  ProcessingHelper.ts  ScreenshotHelper.ts  SessionTracker.ts  SettingsWindowHelper.ts  WindowHelper.ts  ipcHandlers.ts  main.ts  preload.ts
native-module/: Cargo.toml  index.js  package-lock.json  package.json
scripts/: ad-hoc-sign.js  bench-screen-understanding.mjs  build-electron.js  build-native.js  generate-icons.mjs  patch-electron-plist.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
zero-native-poc/: .gitignore  README.md  app.zon  build.zig  build.zig.zon
(+237 files in other folders)
